--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
         android:layout_height="match_parent"
         android:hint="@string/LoginHintName"
         android:inputType="textEmailAddress"
+        android:id="@+id/loginEmail"
         />
     <TextView
         android:text="@string/PasswordText"
@@ -26,5 +28,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:inputType="textPassword"
+        android:id="@+id/passwordEditText"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/login"
+        android:text="@string/LoginButtonText"
+       />
+
 </LinearLayout>
